# rust-natord

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  lib.rs  search-index.js
natord/: fn.compare.html  fn.compare_ignore_case.html  fn.compare_iter.html  index.html  sidebar-items.js
src/: lib.rs
src/natord/: lib.rs.html
